[metadata]
name = yn40mtcs
author = Yunnan 40m Team.
author_email = weishoulin@kust.edu.cn
description = TCS for Yn40m.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, astrophysics, cosmology, space, CSST
url = https://github.com/astronomical-data-processing/csst-dfs-ingestor
project_urls =
    Bug Tracker = https://github.com/astronomical-data-processing/csst-dfs-ingestor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
setup_requires = setuptools_scm
install_requires = 
    astropy>=4.0
[options.package_data]
yn40mtcs.data = *.*
yn40mtcs.func = *.so
[options.entry_points]
console_scripts =
    yn40mtcs = yn40mtcs.cmd.main:entry_point